[package]
name = "geometric-features"
version = "0.1.0"
edition = "2021"

[lib]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ellipses = [
    "dep:nalgebra"
]

[dependencies]
nalgebra = { version="0.32", optional=true }

[dev-dependencies]
rand = "0.8"